# openapi.yaml
@@ -70,22 +70,25 @@ paths:
                           const: create_folder
                         name:
                           type: string
+                        parent_id:
+                          type: string
                       required:
                         - type
                         - name
+                        - parent_id
                     - type: object
                       properties:
                         type:
                           type: string
                           const: rename_folder
-                        name:
-                          type: string
                         _id:
+                          type: string
+                        name:
                           type: string
                       required:
                         - type
-                        - name
                         - _id
+                        - name
       security:
         - APIKEY_1: []
       responses:
@@ -104,11 +107,20 @@ paths:
                     properties:
                       _id:
                         type: string
-                      name:
+                      folder_name:
+                        type: string
+                      created_by:
+                        type: string
+                      tenant_id:
+                        type: string
+                      parent_id:
                         type: string
                     required:
                       - _id
-                      - name
+                      - folder_name
+                      - created_by
+                      - tenant_id
+                      - parent_id
                 required:
                   - status
                   - data
